...
        body: Center(
          child: snapshot.hasData
              ? RefreshIndicator(
                  child: SetsGridView(
                    snapshot.data!,
                    setListId: widget.brickSetList.id,
                    key: const Key('setList'),
                    onSetDeleted: () =>
                        _refreshBrickSets(context, widget.brickSetList.id),
                  ),
                  onRefresh: () =>
                      _refreshBrickSets(context, widget.brickSetList.id),
                )
...
